Improve multiproject Gradle support.
Stop copying build files from one project to the next.  Or at
least make that minimal.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
+pluginManagement {
+  plugins {
+    id 'org.openjfx.javafxplugin' version '0.0.10'
+  }
+}
+
 rootProject.name = 'DepanFX'
 
 include 'DepanFxApp'
