--- a/DepanFxApp/build.gradle
+++ b/DepanFxApp/build.gradle
@@ -1,43 +1,22 @@
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
-    id 'java'
-    id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
-    id 'org.beryx.jlink' version '2.24.4'
-}
-
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
-}
-
-javafx {
-    version = "20"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+  id 'depanfx.fx-component'
+  id 'org.openjfx.javafxplugin'
+  id 'application'
+  id 'org.beryx.jlink' version "${beryxJlinkVersion}"
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:31.1-jre'
-    implementation project(':DepanFxWorkspace')
+  implementation project(':DepanFxWorkspace')
 }
 
 application {
-    mainClass = "com.pnambic.depanfx.app.DepanFxApp"
-    mainModule = "depanfx.app"
+  mainClass = "com.pnambic.depanfx.app.DepanFxApp"
+  mainModule = "depanfx.app"
 }
 
 jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        name = 'depanfx'
-    }
-}
-
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+  launcher {
+    name = 'depanfx'
+  }
 }
