--- a/buildSrc/src/main/groovy/depanfx.base.gradle
+++ b/buildSrc/src/main/groovy/depanfx.base.gradle
@@ -10,7 +10,7 @@ repositories {
 
 dependencies {
   // Use JUnit Jupiter for testing.
-  testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
+  // testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
 
   // This dependency is used by the application.
   implementation "com.google.guava:guava:${guavaVersion}"
