--- a/DepanFxApp/build.gradle
+++ b/DepanFxApp/build.gradle
@@ -1,16 +1,27 @@
 plugins {
   id 'depanfx.fx-component'
   id 'org.openjfx.javafxplugin'
+  id 'org.springframework.boot'
+  id 'io.spring.dependency-management'
   id 'application'
   id 'org.beryx.jlink' version "${beryxJlinkVersion}"
 }
 
 dependencies {
+  implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.boot:spring-boot-autoconfigure'
+  implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
+  implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+
+  implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
+  implementation project(':DepanFxWorkspaceGui')
+
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 application {
-  mainClass = "com.pnambic.depanfx.app.DepanFxApp"
+  mainClass = "com.pnambic.depanfx.DepanFxApplication"
   mainModule = "depanfx.app"
 }
 
