--- a/DepanFxWorkspaceGui/build.gradle
+++ b/DepanFxWorkspaceGui/build.gradle
@@ -1,9 +1,13 @@
 plugins {
-  id 'depanfx.base'
+  id 'depanfx.fx-component'
+  id 'org.openjfx.javafxplugin'
   id 'org.springframework.boot'
   id 'io.spring.dependency-management'
 }
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
+
+  implementation project(':DepanFxScene')
+  implementation project(':DepanFxWorkspace')
 }
