--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,6 @@
 beryxJlinkVersion=2.24.4
 guavaVersion=31.1-jre
 javafxPluginVersion=0.0.10
+javafxWeaverVersion=1.3.0
 junitJupiterVersion=2.24.4
+slf4jVersion=1.7.36
