--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,14 @@
 pluginManagement {
   plugins {
     id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
   }
 }
 
 rootProject.name = 'DepanFX'
 
 include 'DepanFxApp'
+include 'DepanFxScene'
 include 'DepanFxWorkspace'
+include 'DepanFxWorkspaceGui'
