--- a/DepanFxWorkspace/build.gradle
+++ b/DepanFxWorkspace/build.gradle
@@ -6,4 +6,7 @@ plugins {
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
+
+  implementation project(':DepanFxGraph')
+  implementation project(':DepanFxPersistence')
 }
