--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,8 @@ include 'DepanFxFileSystem'
 include 'DepanFxFileSystemGui'
 include 'DepanFxGraph'
 include 'DepanFxGraphDoc'
+include 'DepanFxGraphDocXstream'
+include 'DepanFxPersistence'
 include 'DepanFxScene'
 include 'DepanFxWorkspace'
 include 'DepanFxWorkspaceGui'
