--- a/DepanFxPersistence/build.gradle
+++ b/DepanFxPersistence/build.gradle
@@ -5,8 +5,15 @@ plugins {
 }
 
 dependencies {
+  implementation "com.thoughtworks.xstream:xstream:${xstreamVersion}"
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
+  implementation "org.slf4j:slf4j-api:${slf4jVersion}"
 
   implementation project(':DepanFxGraph')
-  implementation project(':DepanFxPersistence')
+}
+
+jar {
+  manifest {
+    attributes 'Automatic-Module-Name': 'depanfx.persistence'
+  }
 }
