--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,6 @@ guavaVersion=31.1-jre
 javafxPluginVersion=0.0.10
 javafxWeaverVersion=1.3.0
 junitJupiterVersion=2.24.4
+log4jVersion=2.20.0
 slf4jVersion=1.7.36
+xstreamVersion=1.4.20
