--- a/DepanFxGraphDocXstream/build.gradle
+++ b/DepanFxGraphDocXstream/build.gradle
@@ -11,6 +11,7 @@ dependencies {
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxPersistence')
+  implementation project(':DepanFxWorkspace')
 }
 
 jar {
