--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ rootProject.name = 'DepanFX'
 include 'DepanFxApp'
 include 'DepanFxFileSystem'
 include 'DepanFxFileSystemGui'
+include 'DepanFxFileSystemXstream'
 include 'DepanFxGraph'
 include 'DepanFxGraphDoc'
 include 'DepanFxGraphDocXstream'
