--- a/DepanFxApp/build.gradle
+++ b/DepanFxApp/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id 'depanfx.fx-component'
+  id 'depanfx.base'
   id 'org.openjfx.javafxplugin'
   id 'org.springframework.boot'
   id 'io.spring.dependency-management'
@@ -7,16 +7,24 @@ plugins {
   id 'org.beryx.jlink' version "${beryxJlinkVersion}"
 }
 
+javafx {
+  version = "20"
+  modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter'
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
   implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
 
+  implementation project(':DepanFxFileSystem')
   implementation project(':DepanFxFileSystemGui')
+  implementation project(':DepanFxFileSystemXstream')
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxGraphDocXstream')
   implementation project(':DepanFxPersistence')
+  implementation project(':DepanFxPlatform')
   implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
   implementation project(':DepanFxWorkspaceGui')
