--- a/DepanFxFileSystemGui/build.gradle
+++ b/DepanFxFileSystemGui/build.gradle
@@ -1,8 +1,13 @@
 plugins {
-  id 'depanfx.fx-component'
+  id 'depanfx.base'
   id 'org.openjfx.javafxplugin'
   id 'org.springframework.boot'
   id 'io.spring.dependency-management'
+}
+
+javafx {
+  version = "20"
+  modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 dependencies {
