--- a/DepanFxWorkspaceGui/build.gradle
+++ b/DepanFxWorkspaceGui/build.gradle
@@ -1,12 +1,18 @@
 plugins {
-  id 'depanfx.fx-component'
+  id 'depanfx.base'
   id 'org.openjfx.javafxplugin'
   id 'org.springframework.boot'
   id 'io.spring.dependency-management'
 }
 
+javafx {
+  version = "20"
+  modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
 dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
+  implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
 
   implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
