--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 pluginManagement {
   plugins {
-    id 'org.openjfx.javafxplugin' version '0.0.10'
-    id 'org.springframework.boot' version '3.1.0'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'org.springframework.boot' version '3.1.3'
     id 'io.spring.dependency-management' version '1.1.0'
   }
 }
@@ -16,6 +16,7 @@ include 'DepanFxGraph'
 include 'DepanFxGraphDoc'
 include 'DepanFxGraphDocXstream'
 include 'DepanFxPersistence'
+include 'DepanFxPlatform'
 include 'DepanFxScene'
 include 'DepanFxWorkspace'
 include 'DepanFxWorkspaceGui'
