Create simple project layout

--- a/DepanFxWorkspace/build.gradle
+++ b/DepanFxWorkspace/build.gradle
@@ -8,6 +8,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
 
   implementation project(':DepanFxGraph')
+  implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxPersistence')
   implementation project(':DepanFxPlatform')
 }
