--- a/DepanFxWorkspaceGui/build.gradle
+++ b/DepanFxWorkspaceGui/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
   implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
 
+  implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
 }
