Provide node lists and views

--- a/DepanFxApp/build.gradle
+++ b/DepanFxApp/build.gradle
@@ -23,6 +23,7 @@ dependencies {
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxGraphDocXstream')
+  implementation project(':DepanFxNodeListGui')
   implementation project(':DepanFxPersistence')
   implementation project(':DepanFxPlatform')
   implementation project(':DepanFxScene')
