--- a/DepanFxWorkspaceGui/build.gradle
+++ b/DepanFxWorkspaceGui/build.gradle
@@ -15,6 +15,8 @@ dependencies {
   implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
 
   implementation project(':DepanFxGraphDoc')
+  implementation project(':DepanFxNodeList')
+  implementation project(':DepanFxNodeListGui')
   implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
 }
