--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,8 @@ include 'DepanFxFileSystemXstream'
 include 'DepanFxGraph'
 include 'DepanFxGraphDoc'
 include 'DepanFxGraphDocXstream'
+include 'DepanFxNodeList'
+include 'DepanFxNodeListGui'
 include 'DepanFxPersistence'
 include 'DepanFxPlatform'
 include 'DepanFxScene'
