--- a/DepanFxNodeListGui/build.gradle
+++ b/DepanFxNodeListGui/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
   implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
 
+  implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxNodeList')
   implementation project(':DepanFxScene')
