--- a/DepanFxFileSystem/build.gradle
+++ b/DepanFxFileSystem/build.gradle
@@ -10,4 +10,5 @@ dependencies {
 
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
+  implementation project(':DepanFxNodeList')
 }
