--- a/DepanFxWorkspace/build.gradle
+++ b/DepanFxWorkspace/build.gradle
@@ -5,6 +5,7 @@ plugins {
 }
 
 dependencies {
+  implementation "org.slf4j:slf4j-api:${slf4jVersion}"
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
 
   implementation project(':DepanFxGraph')
