--- a/settings.gradle
+++ b/settings.gradle
@@ -17,8 +17,10 @@ include 'DepanFxGraphDoc'
 include 'DepanFxGraphDocXstream'
 include 'DepanFxNodeList'
 include 'DepanFxNodeListGui'
+include 'DepanFxNodeListXstream'
 include 'DepanFxPersistence'
 include 'DepanFxPlatform'
 include 'DepanFxScene'
 include 'DepanFxWorkspace'
 include 'DepanFxWorkspaceGui'
+include 'DepanFxWorkspaceXstream'
