--- a/DepanFxNodeListXstream/build.gradle
+++ b/DepanFxNodeListXstream/build.gradle
@@ -9,9 +9,11 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
 
   implementation project(':DepanFxGraph')
+  implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxNodeList')
   implementation project(':DepanFxPersistence')
   implementation project(':DepanFxWorkspace')
+  implementation project(':DepanFxWorkspaceXstream')
 
   testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
