--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,8 @@ include 'DepanFxFileSystem'
 include 'DepanFxFileSystemGui'
 include 'DepanFxFileSystemXstream'
 include 'DepanFxGraph'
+include 'DepanFxGit'
+include 'DepanFxGitGui'
 include 'DepanFxGraphDoc'
 include 'DepanFxGraphDocXstream'
 include 'DepanFxNodeList'
