Import git logs as node lists

--- a/DepanFxGit/build.gradle
+++ b/DepanFxGit/build.gradle
@@ -12,4 +12,5 @@ dependencies {
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxNodeList')
+  implementation project(':DepanFxWorkspace')
 }
