Add Built-In project

--- a/DepanFxFileSystem/build.gradle
+++ b/DepanFxFileSystem/build.gradle
@@ -11,4 +11,6 @@ dependencies {
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxNodeList')
+
+  implementation project(':DepanFxWorkspace')
 }
