--- a/DepanFxNodeListGui/build.gradle
+++ b/DepanFxNodeListGui/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxNodeList')
+  implementation project(':DepanFxPersistence')
   implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
 }
