Use perspectives to organize resource contributions

--- a/DepanFxApp/build.gradle
+++ b/DepanFxApp/build.gradle
@@ -28,6 +28,7 @@ dependencies {
   implementation project(':DepanFxNodeListGui')
   implementation project(':DepanFxNodeListXstream')
   implementation project(':DepanFxPersistence')
+  implementation project(':DepanFxPerspective')
   implementation project(':DepanFxPlatform')
   implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
