--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'DepanFxNodeList'
 include 'DepanFxNodeListGui'
 include 'DepanFxNodeListXstream'
 include 'DepanFxPersistence'
+include 'DepanFxPerspective'
 include 'DepanFxPlatform'
 include 'DepanFxScene'
 include 'DepanFxWorkspace'
