--- a/DepanFxGitGui/build.gradle
+++ b/DepanFxGitGui/build.gradle
@@ -14,9 +14,10 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
   implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
 
-  implementation project(':DepanFxScene')
+  implementation project(':DepanFxFileSystem')
   implementation project(':DepanFxGit')
   implementation project(':DepanFxGraphDoc')
-  implementation project(':DepanFxFileSystem')
+  implementation project(':DepanFxPerspective')
+  implementation project(':DepanFxScene')
   implementation project(':DepanFxWorkspace')
 }
