--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,7 @@ pluginManagement {
 rootProject.name = 'DepanFX'
 
 include 'DepanFxApp'
+include 'DepanFxBytecode'
 include 'DepanFxFileSystem'
 include 'DepanFxFileSystemGui'
 include 'DepanFxFileSystemXstream'
@@ -17,6 +18,9 @@ include 'DepanFxGit'
 include 'DepanFxGitGui'
 include 'DepanFxGraphDoc'
 include 'DepanFxGraphDocXstream'
+include 'DepanFxJava'
+include 'DepanFxJavaGui'
+include 'DepanFxJavaXstream'
 include 'DepanFxNodeList'
 include 'DepanFxNodeListGui'
 include 'DepanFxNodeListXstream'
