--- a/DepanFxApp/build.gradle
+++ b/DepanFxApp/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-autoconfigure'
   implementation "net.rgielen:javafx-weaver-core:${javafxWeaverVersion}"
 
+  implementation project(':DepanFxBytecode')
   implementation project(':DepanFxFileSystem')
   implementation project(':DepanFxFileSystemGui')
   implementation project(':DepanFxFileSystemXstream')
@@ -25,6 +26,9 @@ dependencies {
   implementation project(':DepanFxGraph')
   implementation project(':DepanFxGraphDoc')
   implementation project(':DepanFxGraphDocXstream')
+  implementation project(':DepanFxJava')
+  implementation project(':DepanFxJavaGui')
+  implementation project(':DepanFxJavaXstream')
   implementation project(':DepanFxNodeListGui')
   implementation project(':DepanFxNodeListXstream')
   implementation project(':DepanFxPersistence')
