Introduce a JOGL Canvas

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,22 +12,22 @@ include 'DepanFxApp'
 include 'DepanFxBytecode'
 include 'DepanFxFileSystem'
 include 'DepanFxFileSystemGui'
-// include 'DepanFxFileSystemXstream'
 include 'DepanFxGraph'
 include 'DepanFxGit'
 include 'DepanFxGitGui'
 include 'DepanFxGraphDoc'
-// include 'DepanFxGraphDocXstream'
 include 'DepanFxJava'
 include 'DepanFxJavaGui'
-// include 'DepanFxJavaXstream'
 include 'DepanFxNodeList'
 include 'DepanFxNodeListGui'
-// include 'DepanFxNodeListXstream'
+include 'DepanFxJavaXstream'
+include 'DepanFxJogl'
+include 'DepanFxNodeList'
+include 'DepanFxNodeListGui'
+include 'DepanFxNodeViewGui'
 include 'DepanFxPersistence'
 include 'DepanFxPerspective'
 include 'DepanFxScene'
 include 'DepanFxWorkspace'
 include 'DepanFxWorkspaceGui'
-// include 'DepanFxWorkspaceXstream'
 include 'DepanFxXstream'
